# Linux-Distributed-Monitor

./: CMakeLists.txt
Display/: CMakeLists.txt  main.cpp
Display/include/: cpu_load_model.h  cpu_softirq_model.h  cpu_stat_model.h  mem_model.h  monitor_inter.h  monitor_widget.h  net_model.h
Display/src/: cpu_load_model.cpp  cpu_softirq_model.cpp  cpu_stat_model.cpp  mem_model.cpp  monitor_inter.cpp  monitor_widget.cpp  net_model.cpp
Docker/scripts/: monitor_into.sh  monitor_run.sh
Monitor/: CMakeLists.txt  main.cpp
Monitor/Display/: CMakeLists.txt
Monitor/Display/include/: cpu_load_model.h  cpu_softirq_model.h  cpu_stat_model.h  mem_model.h  monitor_inter.h  monitor_widget.h  net_model.h
Monitor/Display/src/: cpu_load_model.cpp  cpu_softirq_model.cpp  cpu_stat_model.cpp  mem_model.cpp
Monitor/Monitor/: CMakeLists.txt  main.cpp
Monitor/Monitor/include/monitor/: cpu_softirq_monitor.h  cpu_stat_monitor.h  mem_monitor.h  monitor_inter.h  net_monitor.h
Monitor/Monitor/include/utils/: read_file.h  utils.h
Monitor/Monitor/src/monitor/: cpu_load_monitor.cpp  cpu_softirq_monitor.cpp  mem_monitor.cpp
Monitor/Monitor/src/utils/: utils.cpp
Monitor/ProtoBuf/: CMakeLists.txt  Cpu_Load.proto  Cpu_Stat.proto  Monitor_Info.proto  NetInfo.proto
Monitor/RPC/: CMakeLists.txt
Monitor/RPC/Client/: CMakeLists.txt  rpc_client.cpp  rpc_client.h
Monitor/RPC/Server/: CMakeLists.txt  rpc_manager.cpp
Monitor/include/monitor/: cpu_load_monitor.h  cpu_stat_monitor.h  monitor_inter.h
Monitor/include/utils/: utils.h
Monitor/src/monitor/: cpu_softirq_monitor.cpp  cpu_stat_monitor.cpp  net_monitor.cpp
Monitor/src/utils/: utils.cpp
ProtoBuf/: CMakeLists.txt  Cpu_Softirq.proto  Mem_Info.proto  Monitor_Info.proto
RPC/: CMakeLists.txt
RPC/Client/: CMakeLists.txt  rpc_client.cpp  rpc_client.h
RPC/Server/: CMakeLists.txt  main.cpp  rpc_manager.cpp  rpc_manager.h
